--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <script>
             alert("Hello, world!");
         </script>
+        <script>
+            alert("Hello, earth!");
+        </script>
     </head>
     <body>
         <h1>Hello, world!</h1>
