--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script>
-            alert("Hello, world!");
-            alert("Hello, earth!");
+            const daysOfTheWeek = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thrusday", "Friday", "Saturday"];
+            let now = new Date();
+            let dayName = daysOfTheWeek[now.getDay()];
+            alert(`Hello, world! Happy ${dayName}.`);
         </script>
     </head>
     <body>
