--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script>
-            const daysOfTheWeek = ["Sunday", "Monday", "Tuesday", "Wednesday",
-                                   "Thrusday", "Friday", "Saturday"];
+            const daysOfTheWeek = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thrusday", "Friday", "Saturday"];
             let now = new Date();
             let dayName = daysOfTheWeek[now.getDay()];
             alert(`Hello, world! Happy ${dayName}.`);
