--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="day.js"></script>
         <script>
-            const daysOfTheWeek = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thrusday", "Friday", "Saturday"];
             let now = new Date();
-            let dayName = daysOfTheWeek[now.getDay()];
-            alert(`Hello, world! Happy ${dayName}.`);
+            alert(`Hello, world! Happy ${dayName(now)}!`);
         </script>
     </head>
     <body>
